  - GEM Alert strings folded at vertical bars in po files (LVL)
  - experimental translation directly within C files (LVL)
- wrappers for (x)bios functions not present unless DBG_(X)BIOS is set; moved
  (x)bios function tables out of vectors.S into (x)bios.c (LVL)
- bdos/fs*.[ch] - renamed rwabs to longjmp_rwabs for clarity (LVL)
- */*_rsc.c 
  - aes resource translation added, sharing code with desk/desk_rsc.c (LVL)
  - folded long strings: no source line longer than 80 chars (LVL)
- po/fr.po - full FR translation (LVL)
- Makefile 
  - gmake black magic :-) shrinks down the size of build rules (LVL)
  - experimental building of a unique-country translated EmuTOS (LVL)
- removed some 'extern' from C source files (should go in .h files) (LVL)
- bios/version.c - removed, was commented out for some time now (LVL)
- po/de.po - some german translations done (MAD)

09. Jul. 2002
- po/de.po - all german translations done (MAD)

19. Jul. 2002
- bios/processor.S - added skeleton for privileged instruction handler (MAD)

20. Jul. 2002
- bios/ikbd.[ch], bios/vectors.S - added key repeat (LVL)
- bios/bios.c - priviledge exception ignored (LVL)
- doc/authors.txt - updated and added email addresses (LVL)

22. Jul. 2002 
- po/de.po - two more german translations done (MAD)
- po/cs.po - did bug update cs.po for new translations (MAD)

23. Jul. 2002
- bios/vector.S - implemented priv. instr. handler (MAD)
                - moved ill. and priv. instr. handlers here. (MAD)

24. Jul. 2002
- bios/vector.S - changed priv. instr. handler (MAD)
- bios/bios.c - Now here all basic vector is done in vecs_init() (MAD)

27. Jul. 2002
- desk/deskapp.c - Enabled/fixed loading and saving of DESKTOP.INF, but
  the file is now called EMUDESK.INF due to some incompatibilities with
  the original GEM's DESKTOP.INF. Added automatic drive scanning when there
  is no such file, too. (THH)
- aes/gemfmlib.c - Dialogs can now be left by pressing ENTER, too. (THH)