@@ -49,7 +49,6 @@
 /* Conditionals just for textblit */
 #define test0           0       /* if give program access to internal variables */
 #define test1           0       /* if using very large fonts (else, 8x16) */
-#define test2           0       /* if using initialized ram (.data) else, .bss */
 #define bytswap         0       /* if font words are byte swapped! */
 
 
